<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FirstName">
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="85"
        android:progressTint="@color/AppColor" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_nabout_yourself"
            android:fontFamily="@font/montserrat"
            android:textColor="@android:color/black"
            android:textSize="40dp"/>
        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/description"
            android:textAlignment="center"
            android:textSize="20dp"
            android:gravity="center"/>
        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:lines="2"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:hint="@string/enter_small_description" />
    </LinearLayout>

    <Button
        android:id="@+id/btnDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/roundbutton2"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/continue_description"
        android:textColor="@android:color/white" />

</RelativeLayout>