<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/nearByText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat"
        android:textSize="25dp"
        android:textStyle="bold"
        android:text="@string/nearbySmall"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_filter_list_24"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"/>
        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/noNearByRelative"
            android:layout_below="@id/nearByText"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_found_any_users"
                android:textStyle="bold"
                android:fontFamily="@font/montserrat"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:hint="@string/not_found_any_user"
                />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/nearByRelative"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/nearByText">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_height="match_parent"
                android:layout_width="match_parent"/>
            <ProgressBar
                android:id="@+id/progressNearBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:progressTint="@color/black"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>