<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/scree_log_in"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:gravity="bottom"
            android:orientation="vertical">

            <!--<TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:gravity="bottom"
                android:text="@string/terms"
                android:textAlignment="center"
                android:textColor="@color/white"
                tools:ignore="RtlCompat" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <Button
                    android:id="@+id/btnPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/roundbutton"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/login_with_phone"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnGoogle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/roundbutton"
                    android:backgroundTint="@color/color_red"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/login_with_google"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/roundbutton"
                    android:backgroundTint="@color/color_dblue"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/login_with_email"
                    android:textColor="@color/white"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btnFacebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/roundbutton"
                    android:backgroundTint="@color/color_dblue"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/login_with_facebook"
                    android:textColor="@color/white" />
            </LinearLayout>
            <!--<TextView-->
            <!--    android:layout_width="match_parent"-->
            <!--    android:layout_height="wrap_content"-->
            <!--    android:layout_gravity="center_horizontal"-->
            <!--    android:textAlignment="center"-->
            <!--    android:fontFamily="@font/montserrat"-->
            <!--    android:text="Trouble Logging In?"-->
            <!--    android:textColor="@android:color/white"/>-->

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/AppColor"
        android:textSize="30dp"
android:visibility="gone"
        android:textStyle="bold"
        app:fontFamily="@font/montserrat" />
  <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:progressTint="@color/black"
        android:visibility="gone"
        android:layout_gravity="center_horizontal" />
</RelativeLayout>